--- a/question/templates/question/t_misc_mobile.html
+++ b/question/templates/question/t_misc_mobile.html
@@ -8,7 +8,7 @@
 <div class="LoadingBar"></div>
 
 
-<main role="main" class="App-main" data-module="misc" data-arg="{{arg}}">
+<main role="main" class="App-main" data-module="misc" data-dfs-main='{"arg":"{{arg}}"}'>
 <div class="Login" style="1height: 624px;">
 
 <div class="Step 1SignContainer-content">
@@ -56,203 +56,7 @@
 </main>
 </div>
 </div>
-<script>
-function checkSmsSend()
-{
-    $(".SignFlow-smsInputButton").off("click");
-    $(".SignFlow-smsInputButton").click(function(){
-    console.log(" click");
-        var is_counting=$(this).hasClass("is-counting");
-        if(is_counting)
-        {
-            console.log("counting,can`t click");
-        }
-        else
-        {
-            var value=$("input[name='phoneNo']").val();
-            var reg = /^1[3|4|5|7|8][0-9]{9}$/;
-            var is_phone_no=reg.test(value)
-            if(is_phone_no)
-            {
-                g_countdown_secs=59;
-                $(this).addClass("is-counting").empty().append('<span id="counting-num">59</span>秒后可重发');
-                setTimeout("countDown()",1000);
-                setCookie("countdown",g_countdown_secs,g_countdown_secs);
-                $.post("/ajax/send_sms/",{"phone_no":value,"type":"password_reset"},function(ret){
-                    if("fail"!=ret)
-                    {
-                        if("unregistered"==ret)
-                        {
-                            $(".SignFlow-accountInputContainer>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("该手机号未注册，无此用户");
-                        }
-                        else
-                        {
-                            $(".StepHeader-subtitle").text("验证码已发送到您的手机上，请查看并输入");
-                        }
-                    }
-                });
-            }
-            else
-            {
-                console.log("phone no error");
-                $(".SignFlow-accountInputContainer>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("手机号格式错误");
-            }
-        }
-        
-    });
-}
-function checkErrorMask()
-{
-    $(".SignFlowInput-errorMask").click(function(){
-        console.log("error mask click");
-        $(this).addClass("SignFlowInput-errorMask--hidden");
-        $(this).siblings(".Input-wrapper").children(".Input").val("").focus();
-    });
-}
-function checkSecondStep()
-{
-    var result=true;
-    var value=$("input[name='password']").val();
-    var reg=/^[A-Za-z0-9]{6,18}$/;// /^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,18}$/;
-    var is_check=reg.test(value);
-    if(!is_check)
-    {
-        console.log("password error");
-        $(".SignFlow-password.SignFlow-password-first>.SignFlowInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("6~18位的字母或数字");
-        result=false;
-    }
-    
-    var value_repeat=$("input[name='repeatPassword']").val();
-    var reg=/^[A-Za-z0-9]{6,18}$/;// /^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,18}$/;
-    var is_check=reg.test(value_repeat);
-    if(!is_check)
-    {
-        console.log("password error");
-        $(".SignFlow-password.SignFlow-password-second>.SignFlowInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("6~18位的字母或数字");
-        result=false;
-    }
-    if (false==result)
-        return false;
-    if(value!=value_repeat)
-    {
-        console.log("password not equal");
-        $(".SignFlow-password>.SignFlowInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("两次密码输入不一致");
-        result=false;
-    }
-    if (false==result)
-        return false;
-    var phone_no=$("input[name='phoneNo']").val(); 
-    var veri_code=$("input[name='digits']").val();
-    $.post("/ajax/reset_pwd/",{"phone_no":phone_no,"veri_code":veri_code,"pwd":value},function(ret){
-        if("fail"!=ret)
-        {
-            if("success"==ret)
-            {
-                console.log("reset ok");
-                location.href="/account/?arg=reset_pwd_success";
-            }
-        }
-    });
-    return false;
-}
-function checkFirstStep()
-{
-    var result=true;
 
-    var phone_no=$("input[name='phoneNo']").val();
-    var reg = /^1[3|4|5|7|8][0-9]{9}$/;
-    var is_check=reg.test(phone_no);
-    if(!is_check)
-    {
-        console.log("phone no error");
-        $(".SignFlow-accountInputContainer>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("手机号格式错误");
-        result=false;
-    }
-
-    var veri_code=$("input[name='digits']").val();
-    var reg = /^[0-9]{6}$/;
-    var is_check=reg.test(veri_code);
-    if(!is_check)
-    {
-        console.log("verification code error");
-        $(".SignFlow-smsInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("验证码格式错误");
-        result=false;
-    }
-    if(false==result)
-        return false;
-    $.post("/ajax/check_sms/",{"phone_no":phone_no,"type":"password_reset","veri_code":veri_code},function(ret){
-        if("fail"!=ret)
-        {
-            if("unregistered"==ret)
-            {
-                $(".SignFlow-accountInputContainer>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("该手机号未注册，无此用户");
-            }
-            else if("veri_code_error"==ret)
-            {
-                $(".SignFlow-smsInput>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("验证码错误");
-            }
-            else if("veri_code_ok"==ret)
-            {
-                console.log("check next step ok");
-                $(".SignFlow-account").addClass("is-hide");
-                $(".SignFlow-SMSInput").addClass("is-hide");
-                $(".SignFlow-password").removeClass("is-hide");
-                $(".PasswordReset-nextStep").text("重置密码");
-                $(".StepHeader-title").text("设置新密码");
-                $(".StepHeader-subtitle").text("新密码长度为6~18位，包含字母或数字");
-                $(".PasswordReset-step").attr("onsubmit","return checkSecondStep()")
-            }
-        }
-    });
-        
-    return false;
-}
-function init()
-{
-    g_arg=$("main").attr("data-arg");
-    if("password_reset"!=g_arg)
-    {
-        var data='<div class="" style="position:relative;padding:0 16px;margin:100px auto;"><div class="" style="font-size:20px;font-weight:600;font-synthesis:style;color:#1a1a1a;text-align:center;padding:10px auto;"><h1 id="errorText" style="margin:20px auto;color:red;"></h1><a id="returnLink" style="color:blue;" href="/"></a></div></div>';
-        $("main").empty().append(data);
-        if("e_veri_code"==g_arg)
-        {
-            $("#errorText").text("验证码错误，注册失败，请尝试返回注册页面重新注册");
-            $("#returnLink").text("返回重新注册");
-            setTimeout(function(){window.location.href="/signinup/?next=/";},10*1000);
-        }
-        else if("e_u_p"==g_arg)
-        {
-            $("#errorText").text("用户名密码错误，登录失败，请尝试返回登录页面重新登录");
-            $("#returnLink").text("返回重新登录");
-            setTimeout(function(){window.location.href="/signinup/?next=/";},10*1000);
-        }
-        else if("e_registered"==g_arg)
-        {
-            $("#errorText").text("该手机号已被注册，请尝试找回密码或更换手机号重新注册");
-            $("#returnLink").text("返回重新注册");
-            setTimeout(function(){window.location.href="/signinup/?next=/";},10*1000);
-        }
-        else if("reset_pwd_success"==g_arg)
-        {
-            $("#errorText").text("重置密码成功");
-            $("#returnLink").text("返回重新登录");
-            setTimeout(function(){window.location.href="/signinup/?next=/";},10*1000);
-        }
-    }
-    else
-    {
-        checkSmsSend();
-        checkErrorMask();
-        var secs=getCookie("countdown");
-        if(null!=secs)
-        {
-            g_countdown_secs=secs;
-            $(".SignFlow-smsInputButton").addClass("is-counting").empty().append('<span id="counting-num">59</span>秒后可重发');
-            setTimeout("countDown()",1000);
-        }
-    }
-}
-</script>
 </body>
 
 </html>
