--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -386,7 +386,8 @@ function appendInviteElement(ret)
                     </div>\
                     </div>\
                     ';
-        $(".QuestionInvitation-content .List").append(data);
+        console.log(data);
+        $(".QuestionInvitation-content>.List").append(data);
     }
 }
 function showInvite()
