--- a/question/templates/question/t_mytopic_mobile.html
+++ b/question/templates/question/t_mytopic_mobile.html
@@ -42,7 +42,7 @@
 </div>
 </div>
 <div class="List">
-<div id="feedArea" class="">
+<div id="appendArea" class="">
 <!--<div class="List-item SearchItem">-->
 </div>
 </div>
@@ -96,133 +96,6 @@
         <svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>        
 	</div>
 </div>
-<script>
-function followTopics()
-{
-    $("a[name='follow']").off("click");
-    $("a[name='follow']").on("click",function(){
-        var element=$(this);
-        var topic_id=element.attr("data-topic-id");
-        if("true"==element.attr("data-followed"))
-        {
-            $.post("/ajax/topic_follow/0/"+topic_id+"/",function(ret){
-                if("fail"!=ret)
-                {
-                    element.removeClass("zg-unfollow").addClass("zg-follow").text("关注");
-                    element.attr("data-followed","false");
-                    //updateValue("topic-followed",ret);
-                }
-            }); 
-        }
-        else
-        {
-            $.post("/ajax/topic_follow/1/"+topic_id+"/",function(ret){
-                if("fail"!=ret)
-                {
-                    element.removeClass("zg-follow").addClass("zg-unfollow").text("取消关注");
-                    element.attr("data-followed","true");
-                    //update_value("topic-followed",ret);
-                }
-            });  
-        }
-    });
-}
-function appendTopicElement(ret)
-{
-    for( var i in ret)
-    {
-        var topic_id=ret[i][0];
-        var topic_name=ret[i][1];
-        var topic_avatar=ret[i][2];
-        var topic_detail=ret[i][3];
-        var topic_question_nums=ret[i][4];
-        var topic_follower_nums=ret[i][5];
-        var topic_pub_date=ret[i][6];
-        var topic_followed=ret[i][7];
-        
-        if(topic_followed)
-            var follow_button_data='<button class="Button Button--grey FollowButton" type="button" data-follow-type="topic" data-topic-id="'+topic_id+'" data-followed="true">已关注</button>';
-        else
-            var follow_button_data='<button class="Button Button--blue FollowButton" type="button" data-follow-type="topic" data-topic-id="'+topic_id+'" data-followed="false">关注话题</button>';
-        
-        var data='<div class="List-item">\
-                    <div class="ContentItem">\
-                    <div class="ContentItem-main">\
-                    <div class="ContentItem-image">\
-                    <span class="TopicLink TopicItem-avatar">\
-                    <a class="TopicLink-link" target="_blank" href="/topic/'+topic_id+'">\
-                    <img class="Avatar Avatar--large TopicLink-avatar" width="60" height="60" src="'+topic_avatar+'"  alt="'+topic_name+'" data-author-id="'+topic_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">\
-                    </a>\
-                    </span>\
-                    </div>\
-                    <div class="ContentItem-head">\
-                    <h2 class="ContentItem-title">\
-                    <div class="TopicItem-title">\
-                    <span class="TopicLink TopicItem-name">\
-                    <a class="TopicLink-link" target="_blank" href="/er/'+topic_id+'"><span class="RichText">'+topic_name+'</span></a>\
-                    </span>\
-                    </div>\
-                    </h2>\
-                    <div class="ContentItem-meta">\
-                    <div>\
-                    <div class="ContentItem-status">\
-                    <div class="ContentItem-statusItem">'+topic_detail+'</div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    <div class="ContentItem-extra">'+follow_button_data+'</div>\
-                    </div>\
-                    </div>\
-                    </div>\
-                    ';
-        $("#feedArea").append(data);
-    }
-} 
-function getMoreData() {
-    var nums=g_last_getmoredata_index;//$('.Setting-item').length;
-    var order=1;//pub_date
-    var start=nums;
-    var end=start+STEP*2;
-    var bIsGetAll=0;
-    $.get('/ajax/topics/'+bIsGetAll+'/'+start+'/'+end+'/',function(ret){
-        if("fail"!=ret)
-        {
-            appendTopicElement(ret); 
-            followTopics();            
-            checkSets();
-            g_last_getmoredata_index+=STEP*2;
-        }
-        setLockScrollMoreData("false");
-    });
-} 
-function initElement()
-{
-    if("true"==g_logged)
-        $("#myfollow").attr("href","/er/"+g_user_id+"/following/topics/");
-}
-function initData()
-{
-    g_last_getmoredata_index=0;
-	var str_main_data=$("main").attr("data-dfs-main");
-	console.log(str_main_data);
-	var main_data=JSON.parse(str_main_data);//str_main_data.parseJSON();
-	g_logged=main_data.logged;
-    if("true"==g_logged)
-    {
-        g_user_id=main_data.user_id;
-        g_user_name=main_data.user_name;
-        g_user_avatar=main_data.user_avatar;
-    }	
-} 
-function init()
-{
-    initData();
-    initElement();
-    getMoreData();
-    checkSets();
-    //appendLetterModal();
-}
-</script>
+
 </body>
 </html>
