--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -22,8 +22,8 @@
 <div role="search" style="position:absolute; width:auto;left:0px;right:73px;float:none;margin:7px 0 0 10px;">
 <div style="padding-right:30px;width:100%;height:33px;">
 <!--<input type="hidden" name="type" value="content"><label for="q" class="hide-text">知乎搜索</label>-->
-<input type="text" style="position:absolute;padding:7px 50px 7px 10px;width:100%;font-size:14px;line-height:17px;background-color:#e1eaf2;border:1px solid;border-radius:4px;box-sizing:border-box;" id="q" name="q" autocomplete="off" value="" maxlength="100" placeholder="搜索你感兴趣的内容..." role="combobox" aria-autocomplete="list" oninput="checkSearch(this)">
-<button id="search_button" type="button" onclick="checkSearchSubmit(this)" style="position:absolute; top:0;right:0;background:0 0;border:0;width:30px;height:100%;">
+<input type="text" style="position:absolute;padding:7px 50px 7px 10px;width:100%;font-size:14px;line-height:17px;background-color:#e1eaf2;border:1px solid;border-radius:4px;box-sizing:border-box;" id="q" name="q" autocomplete="off" value="" maxlength="100" placeholder="搜索你感兴趣的内容..." role="combobox" aria-autocomplete="list">
+<button id="search_button" type="button" style="position:absolute; top:0;right:0;background:0 0;border:0;width:30px;height:100%;">
 <!--<span class="hide-text">搜索</span>-->
 <span><svg viewBox="0 0 16 16" class="Icon Icon--search" style="height:16px;width:16px;fill:#afbdcf" width="16" height="16" aria-hidden="true"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg></span>
 </button>
@@ -51,7 +51,7 @@
 
 <div class="Card">
 <div class="List">
-<div id="feedArea" class="">
+<div id="appendArea" class="">
 <!--<div class="List-item SearchItem">-->
 </div>
 </div>
@@ -105,83 +105,6 @@
         <svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>        
 	</div>
 </div>
-<script>
-function appendSearchPageElement(ret)
-{
-    for ( var i in ret)
-    {
-        var question_id=ret[i][0];
-        var question_title=ret[i][1];
-        var question_answer_nums=ret[i][2];
-        question_title=question_title.replace(g_search_keyword,"<em>"+g_search_keyword+"</em>");
-        console.log(question_title);
-        var data='<div class="List-item"><div class="ContentItem AnswerItem"><h2 class="ContentItem-title"><div><meta itemprop="url" content="/question/'+question_id+'"><a target="_blank" href="/question/'+question_id+'"><span class="Highlight">'+question_title+'</span></a></div></h2></div></div>';
-        $("#feedArea").append(data);
-    }
-}
 
-function getMoreData() {
-    if((""!=g_search_keyword)&&(""!=g_search_type))
-    {
-        var nums=g_last_getmoredata_index;//$('.List-item').length;
-        var order=1;//pub_date
-        var start=nums;
-        var end=start+STEP*2;
-        $.post('/ajax/search/'+g_search_type+'/'+order+'/'+start+'/'+end+'/',{keyword:g_search_keyword},function(ret){
-            if("fail"!=ret)
-            {
-                appendSearchPageElement(ret);  
-                checkSets();
-                g_last_getmoredata_index+=STEP*2;
-            }
-            setLockScrollMoreData("false");
-        });
-    }
-} 
-function checkSearchType()
-{
-    
-    $(".Tabs-link").off("click");
-    $(".Tabs-link").click(function(){
-        $(".Tabs-link").removeClass("is-active");
-        $(this).addClass("is-active");
-        g_search_type=$(this).attr("data-search-type");
-        $("#feedArea").empty();
-        getMoreData();
-    });
-}
-
-function initElement()
-{   
-    if(""==g_search_type)
-    {
-        g_search_type="question";
-    }
-    $(".Tabs-link").removeClass("is-active");
-    $(".Tabs-link").each(function(){
-        if($(this).attr("data-search-type")==g_search_type)
-            $(this).addClass("is-active");
-    });
-}
-function initData()
-{
-    g_last_getmoredata_index=0;
-    var str_main_data=$("main").attr("data-dfs-main");
-	var main_data=JSON.parse(str_main_data);
-    g_search_keyword=main_data.search_keyword;
-    g_search_type=main_data.search_type;
-    g_logged=main_data.logged;
-    g_user_id=main_data.user_id;
-}
-function init()
-{
-    initData();
-    initElement();
-    getMoreData();
-    checkSets();
-    checkSearchType();
-    //appendLetterModal();
-}
-</script>
 </body>
 </html>
