--- a/question/templates/question/t_sign_mobile.html
+++ b/question/templates/question/t_sign_mobile.html
@@ -6,7 +6,7 @@
 <div id="root">
 <div class="App" data-reactroot="">
 <div class="LoadingBar"></div>
-<main role="main" class="App-main" data-module="sign">
+<main role="main" class="App-main" data-module="sign" data-dfs-main='{}'>
 <div class="Login" style="1height: 624px;">
 <div class="SignFlowHeader"><svg viewBox="0 0 14 14" class="Icon Icon--remove" style="fill:#fff;height:14px;width:14px" width="14" height="14" aria-hidden="true"><title></title><g><path d="M8.486 7l5.208-5.207c.408-.408.405-1.072-.006-1.483-.413-.413-1.074-.413-1.482-.005L7 5.515 1.793.304C1.385-.103.72-.1.31.31-.103.724-.103 1.385.305 1.793L5.515 7l-5.21 5.207c-.407.408-.404 1.072.007 1.483.413.413 1.074.413 1.482.005L7 8.485l5.207 5.21c.408.407 1.072.404 1.483-.007.413-.413.413-1.074.005-1.482L8.485 7z"></path></g></svg><div class="SignFlowHeader-title">登录知乎</div><div class="SignFlowHeader-subTitle">发现更大的世界</div></div>
 
@@ -77,7 +77,7 @@
 </form>
 </div>
 
-<div class="SignContainer-switch" data-action="login">没有帐号？<span onclick="switchRegisterLogin(this)">注册</span></div>
+<div class="SignContainer-switch" data-action="login"><div id="registerLoginText">没有帐号？</div><span id="switchRegisterLogin">注册</span></div>
 
 <!--<div class="Login-signinTypes">
 <div class="Login-signinButtons"><button class="Button" type="button">密码登录</button></div>
@@ -90,89 +90,7 @@
 </div>
 </div>
 <script>
-function checkSmsSend()
-{
-    $(".SignFlow-smsInputButton").off("click");
-    $(".SignFlow-smsInputButton").click(function(){
-        var is_counting=$(this).hasClass("is-counting");
-        if(is_counting)
-        {
-            console.log("counting,can`t click");
-        }
-        else
-        {
-            var value=$("input[name='regPhoneNo']").val();
-            var reg = /^1[3|4|5|7|8][0-9]{9}$/;
-            var is_phone_no=reg.test(value)
-            if(is_phone_no)
-            {
-                g_countdown_secs=59;
-                $(this).addClass("is-counting").empty().append('<span id="counting-num">59</span>秒后可重发');
-                setTimeout("countDown()",1000);
-                setCookie("countdown",g_countdown_secs,g_countdown_secs);
-                $.post("/ajax/send_sms/",{"phone_no":value,"type":"register"},function(ret){
-                    if("fail"!=ret)
-                    {
-                        if("registered"==ret)
-                            $(".SignFlow-accountInputContainer>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("该手机号已注册");
-                    }
-                });
-            }
-            else
-            {
-                console.log("phone no error");
-                $(".SignFlow-accountInputContainer>.SignFlowInput-errorMask").removeClass("SignFlowInput-errorMask--hidden").text("手机号格式错误");
-            }
-        }
-        
-    });
-}
-function checkErrorMask()
-{
-    $(".SignFlowInput-errorMask").click(function(){
-        console.log("error mask click");
-        $(this).addClass("SignFlowInput-errorMask--hidden");
-        $(this).siblings(".Input-wrapper").children(".Input").val("").focus();
-    });
-}
-function checkSwithPassword()
-{
-    $(".SignFlow-switchPassword").off("click");
-    $(".SignFlow-switchPassword").click(function(){
-        var input=$(this).parents(".SignFlow-password").find(".Input");
-        if("password"==input.attr("type"))
-        {
-            input.attr("type","text");
-            var password_icon='<svg width="24" height="20" viewBox="0 0 24 24" class="Icon SignFlow-switchPasswordIcon Icon--read" aria-hidden="true" style="vertical-align: middle; height: 20px; width: 24px;"><title></title><g><title>Read</title><path d="M1 11.5C1 15 7 19 12 19s11-4 11-7.5S17 4 12 4 1 8 1 11.5zm11 5c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm-3-5c0 1.66 1.34 3 3 3s3-1.34 3-3-1.34-3-3-3-3 1.34-3 3z" fill-rule="evenodd"></path></g></svg>';
-        }
-        else
-        {
-            input.attr("type","password");
-            var password_icon='<svg width="24" height="20" viewBox="0 0 24 24" class="Icon SignFlow-switchPasswordIcon Icon--inconspicuous" aria-hidden="true" style="vertical-align: middle; height: 20px; width: 24px;"><title></title><g><title>Inconspicuous</title><path d="M17.007 11.504c0 .65-.13 1.26-.36 1.83l3 3.073S23 14.136 23 11.504C23 8.008 17.255 4 11.995 4c-1.4 0-2.741.25-3.982.701l2.161 2.16c.57-.23 1.18-.36 1.831-.36a5.004 5.004 0 0 1 5.002 5.003zM2.57 4.342l2.067 2.075C3.499 7.258 1 9.119 1 11.504c0 3.336 5.79 7.503 11.005 7.503 1.55 0 3.031-.3 4.382-.84l.42.42 2.125 2.118s.782.571 1.314 0-.074-1.305-.074-1.305L3.955 3.183s-.76-.742-1.385-.19c-.626.554 0 1.35 0 1.35zm4.963 4.96l1.55 1.552c-.05.21-.08.43-.08.65 0 1.66 1.341 3.001 3.002 3.001.22 0 .44-.03.65-.08l1.551 1.551c-.67.33-1.41.53-2.2.53a5.004 5.004 0 0 1-5.003-5.002c0-.79.2-1.53.53-2.201zm4.312-.78l3.151 3.152.02-.16c0-1.66-1.34-3.001-3.001-3.001l-.17.01z" fill-rule="evenodd"></path></g></svg>';
-        }
-        $(this).empty().append(password_icon);
-    });
-
-}
-
-function switchRegisterLogin(e)
-{
-    var swith_element=$(".SignContainer-switch");
-    if("login"==swith_element.attr("data-action"))
-    {
-        swith_element.attr("data-action","register").empty().append('已有帐号？<span onclick="switchRegisterLogin()">登录</span>');
-        $(".SignFlowHeader-title").text("注册知乎");
-        $("#register").removeClass("is-hide");
-        $("#login").addClass("is-hide");
-    }
-    else
-    {
-        swith_element.attr("data-action","login").empty().append('没有帐号？<span onclick="switchRegisterLogin()">注册</span>');
-        $(".SignFlowHeader-title").text("登录知乎");
-        $("#register").addClass("is-hide");
-        $("#login").removeClass("is-hide");
-    }
-}
+/*
 function init()
 {
     console.log("init");
@@ -194,6 +112,7 @@ function init()
         location.href="/";
     });
 }
+*/
 </script>
 </body>
 </html>
