--- a/question/templates/question/t_index.html
+++ b/question/templates/question/t_index.html
@@ -8,7 +8,7 @@
 </div>-->
 
 <!--------------------main---------------------->
-<main role="main" class="App-main">
+<main role="main" class="App-main" data-module="index" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}"}'>
 <div class="Topstory">
 <div class="Topstory-container">
 <div class="Topstory-mainColumn">
@@ -56,29 +56,7 @@
 <!-- letter（Modal） -->
 <!-- append by js -->
 <!-- letter（Modal） -->
-<script>
-function getMoreData() { 
-    var nums=g_last_getmoredata_index;
-    var order=1;//pub_date
-    var start=nums;
-    var end=start+STEP;
-    $.get('/ajax/questions/'+order+'/'+start+'/'+end+'/',function(ret){
-        if("fail"!=ret)
-        {
-            appendAnswerElementCard(ret,"has_topic_question_title","append");  
-            checkSets();
-            g_last_getmoredata_index+=STEP;
-        }
-        setLockScrollMoreData("false");
-    });
-} 
 
-function init()
-{
-    getMoreData();
-    appendLetterModal();
-}
-</script>
 </body>
 
 </html>
